# Coca-cola-GEO

./: .env.example  .gitignore  cli.py  config.yaml  pyproject.toml
dashboard/: package-lock.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/citations/: route.ts
dashboard/src/app/api/competitors/: route.ts
dashboard/src/app/api/costs/: route.ts
dashboard/src/app/api/overview/: route.ts
dashboard/src/app/api/prompts/: route.ts
dashboard/src/app/api/responses/: route.ts
dashboard/src/app/api/runs/: route.ts
dashboard/src/components/: citation-charts.tsx  competitor-bar.tsx  competitor-bubble.tsx  cost-table.tsx  engine-table.tsx  insight-callout.tsx  kpi-cards.tsx  prompt-heatmap.tsx  radar-chart.tsx  response-explorer.tsx  sentiment-chart.tsx
dashboard/src/lib/: constants.ts  db.ts  queries.ts  types.ts
docs/: fix_docx.py  gen_arch_diagram.py  md2docx.py  proposal.md  reference.docx  research.md  roadmap.md
docs/docx/: proposal.docx  research.docx  roadmap.docx  run_e0ed019f_findings.docx  run_e9862845_findings.docx
prompts/: seed_prompts.yaml
results/: run_e0ed019f.csv  run_e0ed019f_findings.md  run_e9862845.csv  run_e9862845_findings.md  run_e9862845_raw.csv
src/: runner.py
src/aggregation/: stats.py
src/extraction/: analyzer.py  normalizer.py
src/providers/: base.py  gemini_provider.py  openai_provider.py  perplexity_provider.py
src/reporting/: costs.py  csv_export.py
src/storage/: db.py
